# pynxtools-raman

./: .cruft.json  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  MANIFEST.in  README.md  contact.html  dev-requirements.txt  index.html  mkdocs.yaml  pyproject.toml
.cspell/: custom-dictionary.txt
.github/workflows/: compatibility_with_pynxtools_release.yaml  compatibility_with_pynxtools_release.yml  mkdocs-deploy.yml  nomad-requirements.yml  publish.yml  pylint.yml  pytest.yml  pytest2.yml  spellcheck.yml
docs/: contact.md  index.md
docs/how-tos/: convert_data.md  installation.md
docs/reference/: rod.md  witec.md
docs/tutorial/: adjust_config_file.md  contributing.md  installation.md
examples/: eln_data.yaml
examples/beam_path/raman_data_for_nexus_file/: Si_532_spalt100_t180_akku1_z(unpol)z_80wn1300_2267.txt  detector_efficiency_vs_wavelength.txt  grating_reflectivity.txt  grating_reflectivity_vertical.txt  laser_line_measurement_532nm_short.txt  transmission_mitutoyo_obj.txt
examples/database/rod/: README.md  config_file_rod.json  new_output.nxs
examples/thermo_fischer/jdx/: README.md  dxr_sucrose780.JDX  tfs_example_neuxs.nxs
examples/thermo_fischer/todo/Standard Raman dispersiv/: dxr_sucrose780.ABS  dxr_sucrose780.CSV  dxr_sucrose780.IRD  dxr_sucrose780.IRS  dxr_sucrose780.NIC  dxr_sucrose780.SPA  dxr_sucrose780.SPC  dxr_sucrose780.WMF
examples/witec/txt/: README.md  config_file.json  eln_data.yaml  eln_data_witec_txt.yaml
how-tos/: convert_data.html  download_rod.html  installation.html
learn/: versioning.html
pynxtools_raman/: reader.py
reference/: rod.html  witec.html
scripts/: generate_custom_dict.sh  generate_reference_files.sh
search/: search_index.json
src/pynxtools_raman/: reader.py  reader_utils.py  value_mappers.py
src/pynxtools_raman/config/: config_file_rod.json  config_file_thermo_fischer.json  config_file_witec.json  config_witec.json
src/pynxtools_raman/nomad/: README.md  __init__.py
src/pynxtools_raman/nomad/apps/: __init__.py
src/pynxtools_raman/rod/: rod_get_file.py  rod_reader.py
src/pynxtools_raman/thermo_fischer/: thermo_fischer_reader.py
src/pynxtools_raman/witec/: witec_reader.py
src/pynxtools_raman/witec/txt/: witec_data_model.py  witec_mappings.py  witec_reader.py
src/pynxtools_raman_multiformat/: reader.py  reader_rod_utils.py  reader_utils.py
src/pynxtools_raman_multiformat/config/: config_rod.json
src/pynxtools_raman_multiformat/rod/: rod_data_model.py  rod_mappings.py  rod_reader.py
src/pynxtools_raman_multiformat/sub_readers/: rod.py  witec.py
src/pynxtools_raman_multiformat/witec/: witec_reader.py
tests/: test_nomad_apps.py  test_nomad_apps.py.rej  test_reader.py  test_utils_versioning.py
tests/data/rod/: example.nxs  ref_output.txt  rod_ref.nxs
tests/data/txt_witec/: eln_data_witec_txt.yaml
tests/data/witec/: eln_data.yaml  example.nxs  ref_output.txt  witec_ref.nxs
tests/data_multi/rod/: config_file_rod.json  example.nxs
tests/data_multi/witec/: example.nxs
tests/nomad/: test_nomad_apps.py
tutorial/: adjust_config_file.html  contributing.html  installation.html
