[build-system]
requires = ["setuptools>=78.1.1", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pynxtools-raman"
dynamic = ["version"]
authors = [
    { name = "The NOMAD Authors", email = "fairmat@physik.hu-berlin.de" },
]
description = "A pynxtools reader plugin for transferring Raman data from vendor formats to NeXus and NOMAD."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pynxtools>=0.12.0",
    "gemmi>=0.6.7",
    "requests"
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff>=0.15.0",
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "types-pyyaml",
    "types-pytz",
    "types-requests",
    "pre-commit",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocs-macros-plugin",
    "pymdown-extensions",
    "mkdocs-click"
]
nomad = ["nomad-lab[parsing, infrastructure]>=1.3.17"]

[project.urls]
"Homepage" = "https://github.com/FAIRmat-NFDI/pynxtools-raman"
"Bug Tracker" = "https://github.com/FAIRmat-NFDI/pynxtools-raman/issues"

[project.entry-points.'pynxtools.reader']
raman = "pynxtools_raman.reader:RamanReader"

[project.entry-points.'nomad.plugin']
raman_app_entry_point = "pynxtools_raman.nomad.apps:raman_app_entry_point"

[project.scripts]
download_rod_file = "pynxtools_raman.rod.rod_get_file:trigger_rod_download"

[tool.uv]
extra-index-url = [
    "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.setuptools.package-data]
pynxtools_raman = ["*.json"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"

[tool.ruff]
include = ["src/pynxtools_raman/**/*.py", "tests/**/*.py"]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "W", # pycodestyle
    "PL", # pylint
    "UP", # pyupgrade
    "F401", # remove unused import
    "I001", # sort imports
    "NPY201", # upgrade numpy v2
]
ignore = [
    "E501", # Line too long ({width} > {limit} characters)
    "E701", # Multiple statements on one line (colon)
    "E731", # Do not assign a lambda expression, use a def
    "E402",  # Module level import not at top of file
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used instead of constant
    "PLW0603", # Using the global statement
    "PLW2901", # redefined-loop-name
    "PLR1714", # consider-using-in
    "PLR5501", # else-if-used
]
fixable = ["ALL"]
isort.split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
strict = false
ignore_missing_imports = true
follow_imports = "silent"
no_strict_optional = true
disable_error_code = "import, annotation-unchecked"
